test/fail/import-dup.rnp
import { add, add } from './module-FIXTURE.rnp';
---
SyntaxError: Cannot shadow or redeclare add
fail/import-dup.rnp:1:15
import { add, add } from './module-FIXTURE.rnp';
              ^^^
